--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "@iconify/react": "^4.1.0",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "gh-pages": "^5.0.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
